# c_util

./: CMakeLists.txt  encoding.c  main.cpp  print.c  read_write_file.c
include/: encoding.h  print.h  read_write_file.h
